--- a/CleanArch/WebApplication1/Areas/Admin/Views/QuanLyNhanVien/Index.cshtml
+++ b/CleanArch/WebApplication1/Areas/Admin/Views/QuanLyNhanVien/Index.cshtml
@@ -1,8 +1,9 @@
-﻿
+﻿@using Application.DTOs
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
+@model List<QuanLyNhanVien>
 
 <div class="content-body">
 
@@ -57,29 +58,33 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
-                                        <td><img src="./product-img/3_Stripes_Jacquard_Polo_Shirt_Black.jpg" alt="" style="width:100%" ;=""></td>
-                                        <td> Mã Nhân Viên </td>
-                                        <td> Tên Nhân Viên </td>
-                                        <td> Phòng Ban </td>
-                                        <td> Chức vụ </td>
-                                        <td> Công Việc </td>
-                                        <td class="td-center">
-                                            <a href="#">
-                                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong"><i class="fa fa-info"></i></button>
-                                            </a>
-                                        </td>
-                                        <td class="td-center">
-                                            <a href="#">
-                                                <button type="button" class="btn btn-primary"><i class="fa fa-pencil"></i></button>
-                                            </a>
-                                        </td>
-                                        <td class="td-center">
-                                            <a href="#">
-                                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"><i class="fa fa-close"></i></button>
-                                            </a>
-                                        </td>
-                                    </tr>
+                                    @foreach (QuanLyNhanVien quanLyNhanVien in Model)
+                                    {
+                                        <tr>
+                                            <td><img src="./product-img/3_Stripes_Jacquard_Polo_Shirt_Black.jpg" alt="" style="width:100%" ;=""></td>
+                                            <td> @quanLyNhanVien.NhanVienId </td>
+                                            <td> @quanLyNhanVien.HoNhanVien @quanLyNhanVien.TenNhanVien </td>
+                                            <td> @quanLyNhanVien.TenPhongBan </td>
+                                            <td> @quanLyNhanVien.TenChuVu </td>
+                                            <td> @quanLyNhanVien.TenCongViec </td>
+                                            <td class="td-center">
+                                                <a href="#">
+                                                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#@(quanLyNhanVien.NhanVienId + "chitiet")"><i class="fa fa-info"></i></button>
+                                                </a>
+                                            </td>
+                                            <td class="td-center">
+                                                <a href="#">
+                                                    <button type="button" class="btn btn-primary"><i class="fa fa-pencil"></i></button>
+                                                </a>
+                                            </td>
+                                            <td class="td-center">
+                                                <a href="#">
+                                                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#@(quanLyNhanVien.NhanVienId + "xoa")"><i class="fa fa-close"></i></button>
+                                                </a>
+                                            </td>
+                                        </tr>
+                                    }
+
                                 </tbody>
                             </table>
                         </div>
@@ -87,99 +92,103 @@
                 </div>
             </div>
         </div>
-        <div class="modal fade bd-example-modal-lg" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-            <div class="modal-dialog modal-lg" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h4 class="modal-title" id="exampleModalLongTitle" style="color:#7571f9;">Thông tin nhân viên</h4>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"> <span aria-hidden="true">&times;</span> </button>
-                    </div>
-                    <div class="modal-body">
-                        <div class="row">
-                            <div class="col-md-4"><img src="../assets/img/3_Stripes_Jacquard_Polo_Shirt_Black.jpg" alt="" style="width:100%" ;=""></div>
-                            <div class="col-md-8">
-                                <div class="row">
-                                    <div class="col-md-6" style="margin-bottom: 10px">
-                                        <h6 style="color:#ea5774;font-weight:500;">Mã nhân viên:</h6>
-                                        <p> php echo $order_id </p>
-                                    </div>
-                                    <div class="col-md-6" style="margin-bottom: 10px">
-                                        <h6 style="color:#ea5774;font-weight:500;">Họ tên nhân viên:</h6>
-                                        <p> php echo $order_id </p>
-                                    </div>
-                                    <div class="col-md-6" style="margin-bottom: 10px">
-                                        <h6 style="color:#ea5774;font-weight:500;">Phòng ban:</h6>
-                                        <p> php echo $order_id </p>
-                                    </div>
-                                    <div class="col-md-6" style="margin-bottom: 10px">
-                                        <h6 style="color:#ea5774;font-weight:500;">Chức vụ:</h6>
-                                        <p> php echo $order_id </p>
-                                    </div>
-                                    <div class="col-md-6" style="margin-bottom: 10px">
-                                        <h6 style="color:#ea5774;font-weight:500;">Công việc:</h6>
-                                        <p> php echo $order_id </p>
-                                    </div>
-                                    <div class="col-md-6" style="margin-bottom: 10px">
-                                        <h6 style="color:#ea5774;font-weight:500;">Lương căn bản:</h6>
-                                        <p> php echo $order_id </p>
-                                    </div>
-                                    <div class="col-md-6" style="margin-bottom: 10px">
-                                        <h6 style="color:#ea5774;font-weight:500;">Ngày sinh:</h6>
-                                        <p> php echo $order_id </p>
-                                    </div>
-                                    <div class="col-md-6" style="margin-bottom: 10px">
-                                        <h6 style="color:#ea5774;font-weight:500;">Nơi sinh:</h6>
-                                        <p> php echo $order_id </p>
-                                    </div>
-                                    <div class="col-md-6" style="margin-bottom: 10px">
-                                        <h6 style="color:#ea5774;font-weight:500;">Giới tính:</h6>
-                                        <p> php echo $order_id </p>
-                                    </div>
-                                    <div class="col-md-6" style="margin-bottom: 10px">
-                                        <h6 style="color:#ea5774;font-weight:500;">Địa chỉ:</h6>
-                                        <p> php echo $order_id </p>
-                                    </div>
-                                    <div class="col-md-6" style="margin-bottom: 10px">
-                                        <h6 style="color:#ea5774;font-weight:500;">CMND/Thẻ căn cước:</h6>
-                                        <p> php echo $order_id </p>
-                                    </div>
-                                    <div class="col-md-6" style="margin-bottom: 10px">
-                                        <h6 style="color:#ea5774;font-weight:500;">Ngày cấp CMND/Thẻ căn cước:</h6>
-                                        <p> php echo $order_id </p>
-                                    </div>
-                                    <div class="col-md-6" style="margin-bottom: 10px">
-                                        <h6 style="color:#ea5774;font-weight:500;">Số điện thoại:</h6>
-                                        <p> php echo $order_id </p>
-                                    </div>
-                                    <div class="col-md-6" style="margin-bottom: 10px">
-                                        <h6 style="color:#ea5774;font-weight:500;">Email:</h6>
-                                        <p> php echo $order_id </p>
+        @foreach (QuanLyNhanVien quanLyNhanVien1 in Model)
+        {
+            <div class="modal fade bd-example-modal-lg" id="@(quanLyNhanVien1.NhanVienId + "chitiet")" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+                <div class="modal-dialog modal-lg" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title" id="exampleModalLongTitle" style="color:#7571f9;">Thông tin nhân viên</h4>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"> <span aria-hidden="true">&times;</span> </button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="row">
+                                <div class="col-md-4"><img src="../assets/img/3_Stripes_Jacquard_Polo_Shirt_Black.jpg" alt="" style="width:100%" ;=""></div>
+                                <div class="col-md-8">
+                                    <div class="row">
+                                        <div class="col-md-6" style="margin-bottom: 10px">
+                                            <h6 style="color:#ea5774;font-weight:500;">Mã nhân viên:</h6>
+                                            <p> @quanLyNhanVien1.NhanVienId </p>
+                                        </div>
+                                        <div class="col-md-6" style="margin-bottom: 10px">
+                                            <h6 style="color:#ea5774;font-weight:500;">Họ tên nhân viên:</h6>
+                                            <p> @quanLyNhanVien1.HoNhanVien @quanLyNhanVien1.TenNhanVien </p>
+                                        </div>
+                                        <div class="col-md-6" style="margin-bottom: 10px">
+                                            <h6 style="color:#ea5774;font-weight:500;">Phòng ban:</h6>
+                                            <p> @quanLyNhanVien1.TenPhongBan </p>
+                                        </div>
+                                        <div class="col-md-6" style="margin-bottom: 10px">
+                                            <h6 style="color:#ea5774;font-weight:500;">Chức vụ:</h6>
+                                            <p> @quanLyNhanVien1.TenChuVu </p>
+                                        </div>
+                                        <div class="col-md-6" style="margin-bottom: 10px">
+                                            <h6 style="color:#ea5774;font-weight:500;">Công việc:</h6>
+                                            <p> @quanLyNhanVien1.TenCongViec </p>
+                                        </div>
+                                        <div class="col-md-6" style="margin-bottom: 10px">
+                                            <h6 style="color:#ea5774;font-weight:500;">Lương căn bản:</h6>
+                                            <p> @quanLyNhanVien1.LuongCanBan </p>
+                                        </div>
+                                        <div class="col-md-6" style="margin-bottom: 10px">
+                                            <h6 style="color:#ea5774;font-weight:500;">Ngày sinh:</h6>
+                                            <p> @quanLyNhanVien1.NgaySinh </p>
+                                        </div>
+                                        <div class="col-md-6" style="margin-bottom: 10px">
+                                            <h6 style="color:#ea5774;font-weight:500;">Nơi sinh:</h6>
+                                            <p> @quanLyNhanVien1.NoiSinh </p>
+                                        </div>
+                                        <div class="col-md-6" style="margin-bottom: 10px">
+                                            <h6 style="color:#ea5774;font-weight:500;">Giới tính:</h6>
+                                            <p> @quanLyNhanVien1.GioiTinh </p>
+                                        </div>
+                                        <div class="col-md-6" style="margin-bottom: 10px">
+                                            <h6 style="color:#ea5774;font-weight:500;">Địa chỉ:</h6>
+                                            <p> @quanLyNhanVien1.DiaChi </p>
+                                        </div>
+                                        <div class="col-md-6" style="margin-bottom: 10px">
+                                            <h6 style="color:#ea5774;font-weight:500;">CMND/Thẻ căn cước:</h6>
+                                            <p> @quanLyNhanVien1.CMNN </p>
+                                        </div>
+                                        <div class="col-md-6" style="margin-bottom: 10px">
+                                            <h6 style="color:#ea5774;font-weight:500;">Ngày cấp CMND/Thẻ căn cước:</h6>
+                                            <p> @quanLyNhanVien1.NgayCapCMNN </p>
+                                        </div>
+                                        <div class="col-md-6" style="margin-bottom: 10px">
+                                            <h6 style="color:#ea5774;font-weight:500;">Số điện thoại:</h6>
+                                            <p> @quanLyNhanVien1.SDT </p>
+                                        </div>
+                                        <div class="col-md-6" style="margin-bottom: 10px">
+                                            <h6 style="color:#ea5774;font-weight:500;">Email:</h6>
+                                            <p> @quanLyNhanVien1.Email </p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h3 class="modal-title" id="exampleModalLabel" style="margin: auto;">Are you sure to delete this: </h3>
-                    </div>
-                    <div class="modal-footer" style="margin: auto;">
-                        <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
-                        <a href="#">
-                            <button type="button" class="btn btn-danger">Yes, delete it !</button>
-                        </a>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
+            <div class="modal fade" id="@(quanLyNhanVien1.NhanVienId + "xoa")" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h3 class="modal-title" id="exampleModalLabel" style="margin: auto;">Are you sure to delete this: </h3>
+                        </div>
+                        <div class="modal-footer" style="margin: auto;">
+                            <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
+                            <a href="#">
+                                <button type="button" class="btn btn-danger">Yes, delete it !</button>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        }
+
     </div>
     <!-- #/ container -->
 </div>
