Thêm tìm kiếm và xóa trong QuanLyNhanVien
19/11/2020

--- a/CleanArch/WebApplication1/Areas/Admin/Views/QuanLyNhanVien/Search.cshtml
+++ b/CleanArch/WebApplication1/Areas/Admin/Views/QuanLyNhanVien/Search.cshtml
@@ -35,6 +35,8 @@
                                         </button>
                                     </div>
                                 </form>
+                                
+                                <a asp-controller="QuanLyNhanVien" asp-action="Index">Quay lại</a>
                             </div>
                             <div class="col-md-8">
                                 <a href="#" style="float:right;">
