--- a/CleanArch/WebApplication1/Areas/Admin/Views/QuanLyNhanVien/Index.cshtml
+++ b/CleanArch/WebApplication1/Areas/Admin/Views/QuanLyNhanVien/Index.cshtml
@@ -155,11 +155,11 @@
                                         </div>
                                         <div class="col-md-6" style="margin-bottom: 10px">
                                             <h6 style="color:#ea5774;font-weight:500;">CMND/Thẻ căn cước:</h6>
-                                            <p> @quanLyNhanVien1.CMNN </p>
+                                            <p> @quanLyNhanVien1.CMND </p>
                                         </div>
                                         <div class="col-md-6" style="margin-bottom: 10px">
                                             <h6 style="color:#ea5774;font-weight:500;">Ngày cấp CMND/Thẻ căn cước:</h6>
-                                            <p> @quanLyNhanVien1.NgayCapCMNN </p>
+                                            <p> @quanLyNhanVien1.NgayCapCMND </p>
                                         </div>
                                         <div class="col-md-6" style="margin-bottom: 10px">
                                             <h6 style="color:#ea5774;font-weight:500;">Số điện thoại:</h6>
