--- a/CleanArch/WebApplication1/wwwroot/css/style-custom.css
+++ b/CleanArch/WebApplication1/wwwroot/css/style-custom.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+﻿@charset "UTF-8";
 .wizard .content {
     min-height: 50rem !important;
     margin: 0;
@@ -38,7 +38,7 @@
 .inputfile + label figure img {
   width: 100%;
   height: 100%;
-  border-radius: 50%; }
+  border-radius: 10%; }
 
 .form-file {
 margin: auto;
