--- a/CleanArch/WebApplication1/Areas/Admin/Views/QuanLyNhanVien/AddNV.cshtml
+++ b/CleanArch/WebApplication1/Areas/Admin/Views/QuanLyNhanVien/AddNV.cshtml
@@ -120,8 +120,8 @@
                                                 <label for="gioitinh">Giới tính <span class="text-danger">*</span></label>
                                                 <select class="form-control" name="GioiTinh" required>
                                                     <option value="">-- Chọn giới tính --</option>
-                                                    <option value="nam">Nam</option>
-                                                    <option value="nu">Nữ</option>
+                                                    <option value="Nam">Nam</option>
+                                                    <option value="Nữ">Nữ</option>
                                                 </select>
                                             </div>
                                         </div>
@@ -178,7 +178,7 @@
                                         <div class="col-md-6">
                                             <div class="form-group">
                                                 <label for="luong">Lương căn bản <span class="text-danger">*</span></label>
-                                                <input type="number" name="luong" class="form-control" placeholder="Nhập lương căn bản..." required>
+                                                <input type="number" name="LuongCanBan" class="form-control" placeholder="Nhập lương căn bản..." required>
                                             </div>
                                         </div>
                                     </div>
