--- a/CleanArch/WebApplication1/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/CleanArch/WebApplication1/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -101,7 +101,7 @@
                 </div>
                 <div class="header-right">
                     <ul class="clearfix">
-                        <li class="icons dropdown">Hi, <?php echo $info_name?></li>
+                        <li class="icons dropdown">Hi</li>
                         <li class="icons dropdown">
                             <div class="user-img c-pointer position-relative" data-toggle="dropdown">
                                 <span class="activity active"></span>
@@ -143,7 +143,7 @@
                 <ul class="metismenu" id="menu">
                     <li class="nav-label">Dashboard</li>
                     <li>
-                        <a href="#">
+                        <a asp-controller="Dashboard" asp-action="Index">
                             <i class="icon-speedometer menu-icon"></i> <span class="nav-text">Dashboard</span>
                         </a>
                     </li>
