show list + addPB

--- a/CleanArch/WebApplication1/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/CleanArch/WebApplication1/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -154,8 +154,8 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
-                            <i class="icon-tag menu-icon"></i> <span class="nav-text">Sub-Categories</span>
+                        <a asp-controller="PhongBan" asp-action="Index">
+                            <i class="icon-tag menu-icon"></i> <span class="nav-text">Quản lý phòng ban</span>
                         </a>
                     </li>
                     <li>
