--- a/CleanArch/WebApplication1/Areas/Admin/Views/PhongBan/Index.cshtml
+++ b/CleanArch/WebApplication1/Areas/Admin/Views/PhongBan/Index.cshtml
@@ -1,14 +1,17 @@
-﻿@{
+﻿@using Application.DTOs
+@using Domain.Entities
+@using Infrastructure.Persistence.Actions
+@{
     ViewData["Title"] = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_AdminLayout.cshtml";
 }
-
+@model (List<PhongBanDTO> phongBanDTOs, ThongTinDuLieuCuoi thongTinDuLieuCuois)
 <div class="content-body">
 
     <div class="row page-titles mx-0">
         <div class="col p-md-0">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="./index.php">Dashboard</a></li>
+                <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
                 <li class="breadcrumb-item active">Quản lý phòng ban</li>
             </ol>
         </div>
@@ -23,36 +26,23 @@
                         <div class="card-title mb-3">
                             <h4>THÊM PHÒNG BAN</h4>
                         </div>
-                        <form action="#" method="post">
+                        <form method="post" asp-controller="PhongBan" asp-action="AddPB">
                             <div class="form-group">
                                 <label for="mapb">Mã phòng ban <span class="text-danger">*</span></label>
                                 <div class="input-group">
-                                    <input id="mapb" class="form-control" type="text" placeholder="Số liệu tự cấp phát.." name="mapb" readonly="readonly">
+                                    <input id="mapb" class="form-control" type="text" placeholder="Số liệu tự cấp phát.." name="PhongBanId" readonly="readonly">
                                     <div class="input-group-append">
-                                        <button class="btn btn-outline-dark" type="button" onclick="capphatmapb()"><i class="fa fa-plus"></i></button>
+                                        <button id="btn-pb" class="btn btn-outline-dark" type="button" onclick="CapPhatMaPB()"><i class="fa fa-plus"></i></button>
                                     </div>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="tenpb">Tên phòng ban <span class="text-danger">*</span></label>
-                                <select class="form-control" name="tenpb" required>
-                                    <option value="">-- Lựa chọn --</option>
-                                    <option value="html">HTML</option>
-                                    <option value="css">CSS</option>
-                                    <option value="javascript">JavaScript</option>
-                                    <option value="angular">Angular</option>
-                                    <option value="angular">React</option>
-                                    <option value="vuejs">Vue.js</option>
-                                    <option value="ruby">Ruby</option>
-                                    <option value="php">PHP</option>
-                                    <option value="asp">ASP.NET</option>
-                                    <option value="python">Python</option>
-                                    <option value="mysql">MySQL</option>
-                                </select>
+                                <input type="text" name="TenPhongBan" class="form-control" placeholder="Nhập tên phòng ban.." required>
                             </div>
                             <div class="form-group">
                                 <label for="sdt">Số điện thoại <span class="text-danger">*</span></label>
-                                <input type="number" name="sdt" class="form-control" placeholder="Vui lòng nhập liệu.." required>
+                                <input type="number" name="SDTPhongBan" class="form-control" placeholder="Nhấp số điện thoại.." required>
                             </div>
                             <input type="submit" value="Thêm mới" name="themmoi" class="btn btn-primary">
                         </form>
@@ -90,51 +80,33 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
-                                        <td>A</td>
-                                        <td>B</td>
-                                        <td>C</td>
-                                        <td class="td-center"<a href="#"><button type="button" class="btn btn-primary"><i class="fa fa-info"></i></button></a></td>
-                                        <td class="td-center"><a href="#"><button type="button" class="btn btn-primary"><i class="fa fa-pencil"></i></button></a></td>
-                                        <td class="td-center"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"><i class="fa fa-close"></i></button></td>
-                                    </tr>
-                                    <tr>
-                                        <td>A</td>
-                                        <td>B</td>
-                                        <td>C</td>
-                                        <td class="td-center"<a href="#"><button type="button" class="btn btn-primary"><i class="fa fa-info"></i></button></a></td>
-                                        <td class="td-center"><a href="#"><button type="button" class="btn btn-primary"><i class="fa fa-pencil"></i></button></a></td>
-                                        <td class="td-center"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"><i class="fa fa-close"></i></button></td>
-                                    </tr>
-                                    <tr>
-                                        <td>A</td>
-                                        <td>B</td>
-                                        <td>C</td>
-                                        <td class="td-center"<a href="#"><button type="button" class="btn btn-primary"><i class="fa fa-info"></i></button></a></td>
-                                        <td class="td-center"><a href="#"><button type="button" class="btn btn-primary"><i class="fa fa-pencil"></i></button></a></td>
-                                        <td class="td-center"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"><i class="fa fa-close"></i></button></td>
-                                    </tr>
-                                    <tr>
-                                        <td>A</td>
-                                        <td>B</td>
-                                        <td>C</td>
-                                        <td class="td-center"<a href="#"><button type="button" class="btn btn-primary"><i class="fa fa-info"></i></button></a></td>
-                                        <td class="td-center"><a href="#"><button type="button" class="btn btn-primary"><i class="fa fa-pencil"></i></button></a></td>
-                                        <td class="td-center"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal"><i class="fa fa-close"></i></button></td>
-                                    </tr>
-                                    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                        <div class="modal-dialog" role="document">
-                                            <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <h3 class="modal-title" id="exampleModalLabel" style="margin: auto;text-align: center;">Bạn chắc chắn muốn<br>  xoá phòng ban này?</h3>
-                                                </div>
-                                                <div class="modal-footer" style="margin: auto;">
-                                                    <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
-                                                    <a href="#"><button type="button" class="btn btn-danger">Yes, delete it !</button></a>
+                                    @foreach (PhongBanDTO phongban in Model.phongBanDTOs)
+                                    {
+                                        <tr>
+                                            <td>@phongban.PhongBanId</td>
+                                            <td>@phongban.TenPhongBan</td>
+                                            <td>@phongban.SDTPhongBan</td>
+                                            <td class="td-center"><a href="#"><button type="button" class="btn btn-primary"><i class="fa fa-info"></i></button></a></td>
+                                            <td class="td-center"><a href="#"><button type="button" class="btn btn-primary"><i class="fa fa-pencil"></i></button></a></td>
+                                            <td class="td-center"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#@(phongban.PhongBanId + "xoa")"><i class="fa fa-close"></i></button></td>
+                                        </tr>
+                                    }
+                                    @foreach (PhongBanDTO phongban in Model.phongBanDTOs)
+                                    {
+                                        <div class="modal fade" id="@(phongban.PhongBanId + "xoa")" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                            <div class="modal-dialog" role="document">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h3 class="modal-title" id="exampleModalLabel" style="margin: auto;text-align: center;">Bạn chắc chắn muốn<br>xoá phòng ban @phongban.TenPhongBan?</h3>
+                                                    </div>
+                                                    <div class="modal-footer" style="margin: auto;">
+                                                        <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
+                                                        <a href="#"><button type="button" class="btn btn-danger">Yes, delete it !</button></a>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
+                                    }
                                 </tbody>
                             </table>
                         </div>
@@ -145,3 +117,9 @@
     </div>
     <!-- #/ container -->
 </div>
+<script>
+    function CapPhatMaPB() {
+        $('#mapb').val('@AutoKey.InCreasedByOne(Model.thongTinDuLieuCuois.PhongBanId)');
+        $('#btn-pb').prop('disabled', true);
+    }
+</script>
