--- a/CleanArch/WebApplication1/Areas/Admin/Views/PhongBan/Index.cshtml
+++ b/CleanArch/WebApplication1/Areas/Admin/Views/PhongBan/Index.cshtml
@@ -23,29 +23,59 @@
             <div class="col-lg-4 col-md-12">
                 <div class="card">
                     <div class="card-body">
-                        <div class="card-title mb-3">
-                            <h4>THÊM PHÒNG BAN</h4>
-                        </div>
-                        <form method="post" asp-controller="PhongBan" asp-action="AddPB">
-                            <div class="form-group">
-                                <label for="mapb">Mã phòng ban <span class="text-danger">*</span></label>
-                                <div class="input-group">
-                                    <input id="mapb" class="form-control" type="text" placeholder="Số liệu tự cấp phát.." name="PhongBanId" readonly="readonly">
-                                    <div class="input-group-append">
-                                        <button id="btn-pb" class="btn btn-outline-dark" type="button" onclick="CapPhatMaPB()"><i class="fa fa-plus"></i></button>
+
+                        @if (ViewBag.Update == "yes")
+                        {
+                            <div class="card-title mb-3">
+                                <h4>SỬA PHÒNG BAN</h4>
+                            </div>
+                            <form method="post" asp-controller="PhongBan" asp-action="AddPB">
+                                <div class="form-group">
+                                    <label for="mapb">Mã phòng ban <span class="text-danger">*</span></label>
+                                    <div class="input-group">
+                                        <input id="mapb" class="form-control" type="text" placeholder="Số liệu tự cấp phát.." name="PhongBanId" readonly="readonly">
+                                        <div class="input-group-append">
+                                            <button id="btn-pb" class="btn btn-outline-dark" type="button" onclick="CapPhatMaPB()"><i class="fa fa-plus"></i></button>
+                                        </div>
                                     </div>
                                 </div>
+                                <div class="form-group">
+                                    <label for="tenpb">Tên phòng ban <span class="text-danger">*</span></label>
+                                    <input type="text" name="TenPhongBan" class="form-control" placeholder="Nhập tên phòng ban.." required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="sdt">Số điện thoại <span class="text-danger">*</span></label>
+                                    <input type="number" name="SDTPhongBan" class="form-control" placeholder="Nhấp số điện thoại.." required>
+                                </div>
+                                <input type="submit" value="Thêm mới" name="themmoi" class="btn btn-primary">
+                            </form>
+                        }
+                        else
+                        {
+                            <div class="card-title mb-3">
+                                <h4>THÊM PHÒNG BAN</h4>
                             </div>
-                            <div class="form-group">
-                                <label for="tenpb">Tên phòng ban <span class="text-danger">*</span></label>
-                                <input type="text" name="TenPhongBan" class="form-control" placeholder="Nhập tên phòng ban.." required>
-                            </div>
-                            <div class="form-group">
-                                <label for="sdt">Số điện thoại <span class="text-danger">*</span></label>
-                                <input type="number" name="SDTPhongBan" class="form-control" placeholder="Nhấp số điện thoại.." required>
-                            </div>
-                            <input type="submit" value="Thêm mới" name="themmoi" class="btn btn-primary">
-                        </form>
+                            <form method="post" asp-controller="PhongBan" asp-action="AddPB">
+                                <div class="form-group">
+                                    <label for="mapb">Mã phòng ban <span class="text-danger">*</span></label>
+                                    <div class="input-group">
+                                        <input id="mapb" class="form-control" type="text" placeholder="Số liệu tự cấp phát.." name="PhongBanId" readonly="readonly">
+                                        <div class="input-group-append">
+                                            <button id="btn-pb" class="btn btn-outline-dark" type="button" onclick="CapPhatMaPB()"><i class="fa fa-plus"></i></button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="tenpb">Tên phòng ban <span class="text-danger">*</span></label>
+                                    <input type="text" name="TenPhongBan" class="form-control" placeholder="Nhập tên phòng ban.." required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="sdt">Số điện thoại <span class="text-danger">*</span></label>
+                                    <input type="number" name="SDTPhongBan" class="form-control" placeholder="Nhấp số điện thoại.." required>
+                                </div>
+                                <input type="submit" value="Thêm mới" name="themmoi" class="btn btn-primary">
+                            </form>
+                        }
                     </div>
                 </div>
             </div>
@@ -87,7 +117,7 @@
                                             <td>@phongban.TenPhongBan</td>
                                             <td>@phongban.SDTPhongBan</td>
                                             <td class="td-center"><a href="#"><button type="button" class="btn btn-primary"><i class="fa fa-info"></i></button></a></td>
-                                            <td class="td-center"><a href="#"><button type="button" class="btn btn-primary"><i class="fa fa-pencil"></i></button></a></td>
+                                            <td class="td-center"><a asp-controller="PhongBan" asp-action="Update"><button type="button" class="btn btn-primary"><i class="fa fa-pencil"></i></button></a></td>
                                             <td class="td-center"><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#@(phongban.PhongBanId + "xoa")"><i class="fa fa-close"></i></button></td>
                                         </tr>
                                     }
